--- a/SistemaDeFaltas/.classpath
+++ b/SistemaDeFaltas/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="/home/leandro/Escritorio/Repositorio/Sistema-de-faltas/SistemaDeFaltas/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="lib" path="/home/leandro/Escritorio/Repositorio/Sistema-de-faltas/SistemaDeFaltas/jcalendar-1.4/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
